duniverse/menhirLib.20200211/test/static/bad/option.mly
%token FOO
%start <unit> option

%%

option:
  FOO { () }

