duniverse/menhirLib.20200211/test/static/bad/option.exp
File "option.mly", line 6, characters 0-6:
File "<standard.mly>", line 112, characters 8-14:
Error: the symbol option is defined with arities 0 and 1.
